@@ -1,3 +1,7 @@
+2015-12-18  Mark Wielaard  <mjw@redhat.com>
+
+	* eblopenbackend.c (default_debugscn_p): Also match .zdebug sections.
+
 2015-12-08  Jose E. Marchesi  <jose.marchesi@oracle.com>
 
 	* libebl.h: Prototype for ebl_ra_offset.
